--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Web App</title>
+    <title>Home</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            margin-top: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to the Simple Web App</h1>
-    <p><a href="{{ url_for('login') }}">Login</a></p>
+    <p><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('signup') }}">Sign up</a></p>
 </body>
 </html>
